--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^5.8.23",
-    "faucet": "0.0.1",
-    "tape": "^4.2.0"
+    "babel-eslint": "^4.1.2",
     "eslint": "^1.4.1",
     "eslint-config-airbnb": "0.0.8",
-  },
+    "eslint-plugin-react": "^3.3.2",
+    "faucet": "0.0.1",
+    "tape": "^4.2.0"
+  }
 }
