--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node node_modules/.bin/babel-node test/index.js | node node_modules/.bin/faucet/"
+    "test": "node test/index.js | node node_modules/.bin/faucet/"
   },
   "author": "",
   "license": "ISC",
